Bug 1488884: Fix inconsistent <details> opener appearance on iOS
  On iOS, `▶︎` is rendered in emoji mode as `▶️` by default,
whereas `▼︎` is rendered in text mode by default, creating
inconsistency between the open and closed state.

  This fixes it by using the Variation Selector 15 to force
text style appearance.

--- a/kuma/static/styles/base/elements/sectioning.scss
+++ b/kuma/static/styles/base/elements/sectioning.scss
@@ -54,7 +54,7 @@ summary {
 
     /* add marker back in way we control */
     &:before {
-        @include bidi(((content, '\25B6', '\25C0'),));
+        @include bidi(((content, '\25B6\FE0E', '\25C0\FE0E'),));
         display: inline-block;
         width: $grid-spacing; /* fixed width avoids content jog when marker swapped for narrower one */
         color: $blue;
@@ -65,7 +65,7 @@ summary {
         margin-bottom: ($grid-spacing / 2);
 
         &:before {
-            content: '\25BC';
+            content: '\25BC\FE0E';
         }
     }
 }
